force-app/main/default/objects/Market__c/fields/Abbreviation__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation__c</fullName>
    <label>Abbreviation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>