force-app/main/default/objects/Market__c/fields/ACDF_Deadline__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Deadline__c</fullName>
    <label>ACDF Deadline</label>
    <length>50</length>
    <type>Text</type>
</CustomField>