force-app/main/default/objects/Market__c/fields/ACDF_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ACDF_End_Date__c</fullName>
    <label>ACDF End Date</label>
    <type>Date</type>
</CustomField>