force-app/main/default/objects/Market__c/fields/ACDF_Lite__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Lite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACDF Lite</label>
    <type>Checkbox</type>
</CustomField>