force-app/main/default/objects/Market__c/fields/ACDF_Responses_Scored__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Responses_Scored__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ACDF Responses Scored</label>
    <type>Checkbox</type>
</CustomField>