force-app/main/default/objects/Market__c/fields/ACDF_Start__c.field-meta.xml
<CustomField>
    <fullName>ACDF_Start__c</fullName>
    <label>ACDF Start</label>
    <type>Date</type>
</CustomField>