force-app/main/default/objects/Market__c/fields/Actual_ACDF__c.field-meta.xml
<CustomField>
    <fullName>Actual_ACDF__c</fullName>
    <inlineHelpText>w/out nominations</inlineHelpText>
    <label>Actual ACDF</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>