force-app/main/default/objects/Market__c/fields/Actual_Candidates__c.field-meta.xml
<CustomField>
    <fullName>Actual_Candidates__c</fullName>
    <label>Actual Candidates</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>