force-app/main/default/objects/Market__c/fields/Actual_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Upload_Date__c</fullName>
    <description>The actual date we uploaded this year&apos;s section to the publication.</description>
    <inlineHelpText>The actual date we uploaded this year&apos;s section to the publication.</inlineHelpText>
    <label>Actual Upload Date</label>
    <type>Date</type>
</CustomField>