force-app/main/default/objects/Market__c/fields/Actual_Winners_by_Year_Won__c.field-meta.xml
<CustomField>
    <fullName>Actual_Winners_by_Year_Won__c</fullName>
    <description>This field shows the # of certified winners by years won (updated after Sales Close)</description>
    <label>Actual Winners by Year Won</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>