force-app/main/default/objects/Market__c/fields/Additional_Publication_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Name__c</fullName>
    <description>Name of non-core/non-WSJ/non-Forbes publication</description>
    <inlineHelpText>Name of non-core/non-WSJ/non-Forbes publication</inlineHelpText>
    <label>Additional Publication Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>