force-app/main/default/objects/Market__c/fields/Additional_Publication_Readership__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Readership__c</fullName>
    <label>Additional Publication Readership</label>
    <length>250</length>
    <type>Text</type>
</CustomField>