force-app/main/default/objects/Market__c/fields/Additional_Publication_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Additional_Publication_Upload_Date__c</fullName>
    <description>Upload date for non-core/non-WSJ/non-Forbes publication</description>
    <inlineHelpText>Upload date for non-core/non-WSJ/non-Forbes publication</inlineHelpText>
    <label>Additional Publication Upload Date</label>
    <length>250</length>
    <type>Text</type>
</CustomField>