force-app/main/default/objects/Market__c/fields/AF_Certification_Link__c.field-meta.xml
<CustomField>
    <fullName>AF_Certification_Link__c</fullName>
    <label>AF Certification Link</label>
    <type>Url</type>
</CustomField>