force-app/main/default/objects/Market__c/fields/AF_Marketing_Link__c.field-meta.xml
<CustomField>
    <fullName>AF_Marketing_Link__c</fullName>
    <label>AF Marketing Link</label>
    <type>Url</type>
</CustomField>