force-app/main/default/objects/Market__c/fields/AF_Packages_Link__c.field-meta.xml
<CustomField>
    <fullName>AF_Packages_Link__c</fullName>
    <label>AF Packages Link</label>
    <type>Url</type>
</CustomField>