force-app/main/default/objects/Market__c/fields/AG_link_no_price__c.field-meta.xml
<CustomField>
    <fullName>AG_link_no_price__c</fullName>
    <label>AG link no price</label>
    <length>255</length>
    <type>Text</type>
</CustomField>