force-app/main/default/objects/Market__c/fields/AG_link_no_price_MS__c.field-meta.xml
<CustomField>
    <fullName>AG_link_no_price_MS__c</fullName>
    <label>AG link no price (MS)</label>
    <type>Url</type>
</CustomField>