force-app/main/default/objects/Market__c/fields/AG_link_no_price_WF__c.field-meta.xml
<CustomField>
    <fullName>AG_link_no_price_WF__c</fullName>
    <label>AG link no price (WF)</label>
    <type>Url</type>
</CustomField>