force-app/main/default/objects/Market__c/fields/AG_URL_as_Text__c.field-meta.xml
<CustomField>
    <fullName>AG_URL_as_Text__c</fullName>
    <label>AG URL as Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>