force-app/main/default/objects/Market__c/fields/Alive_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Alive_Opportunities__c</fullName>
    <label># Alive Opportunities</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>