force-app/main/default/objects/Market__c/fields/Allow_Sales_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Allow_Sales_Grace_Period__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Sales Grace Period</label>
    <type>Checkbox</type>
</CustomField>