force-app/main/default/objects/Market__c/fields/AmReg_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AmReg_Start_Date__c</fullName>
    <label>AmReg Start Date</label>
    <type>Date</type>
</CustomField>