force-app/main/default/objects/Market__c/fields/Auto_Client_Approval_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Auto_Client_Approval_Deadline__c</fullName>
    <formula>New_Final_Upload__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Client Approval Deadline</label>
    <type>Date</type>
</CustomField>