force-app/main/default/objects/Market__c/fields/Auto_Early_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Early_Approval_Date__c</fullName>
    <formula>Sales_Close__c  + 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Early Approval Date</label>
    <type>Date</type>
</CustomField>