force-app/main/default/objects/Market__c/fields/Auto_Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Auto_Final_Status__c</fullName>
    <formula>Auto_Early_Approval_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Final Status</label>
    <type>Date</type>
</CustomField>