force-app/main/default/objects/Market__c/fields/Auto_Proof_Index__c.field-meta.xml
<CustomField>
    <fullName>Auto_Proof_Index__c</fullName>
    <formula>CASE(MOD(Sales_Close__c - DATE(1900, 1, 7), 7), 0, Sales_Close__c +4, 1, Sales_Close__c +4, 2, Sales_Close__c +6,3, Sales_Close__c +5, 4, Sales_Close__c +4, 5, Sales_Close__c +4, 6, Sales_Close__c +4,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Proof Index</label>
    <type>Date</type>
</CustomField>