force-app/main/default/objects/Market__c/fields/Auto_Round_One1__c.field-meta.xml
<CustomField>
    <fullName>Auto_Round_One1__c</fullName>
    <formula>Case(WEEKDAY( Auto_Round_One__c ), 1,&apos;Sunday&apos;, 2, &apos;Monday&apos;, 3, &apos;Tuesday&apos;, 4, &apos;Wednesday&apos;, 5, &apos;Thursday&apos;, 6, &apos;Friday&apos;,&apos;Saturday&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Round One Day</label>
    <type>Text</type>
</CustomField>