force-app/main/default/objects/Market__c/fields/Auto_Round_One__c.field-meta.xml
<CustomField>
    <fullName>Auto_Round_One__c</fullName>
    <formula>CASE(MOD(Sales_Close__c - DATE(1900, 1, 7), 7), 0, Sales_Close__c +8, 1, Sales_Close__c +8, 2, Sales_Close__c +8,3, Sales_Close__c +8, 4, Sales_Close__c +10, 5, Sales_Close__c +9, 6, Sales_Close__c +6,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Round One</label>
    <type>Date</type>
</CustomField>