force-app/main/default/objects/Market__c/fields/Auto_Round_One_Date__c.field-meta.xml
<CustomField>
    <fullName>Auto_Round_One_Date__c</fullName>
    <formula>IF( Auto_Round_One1__c = &quot;Saturday&quot; ,  Auto_Round_One__c + 2 ,  IF(Auto_Round_One1__c = &quot;Sunday&quot;, Auto_Round_One__c + 1,  Auto_Round_One__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Round One Date</label>
    <type>Date</type>
</CustomField>