force-app/main/default/objects/Market__c/fields/Auto_Round_Two__c.field-meta.xml
<CustomField>
    <fullName>Auto_Round_Two__c</fullName>
    <formula>CASE(MOD(New_Final_Upload__c - DATE(1900, 1, 7), 7), 0, New_Final_Upload__c -4, 1, New_Final_Upload__c -5, 2, New_Final_Upload__c -5,3, New_Final_Upload__c -5, 4, New_Final_Upload__c -3, 5, New_Final_Upload__c -3, 6, New_Final_Upload__c -3,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Round Two</label>
    <type>Date</type>
</CustomField>