force-app/main/default/objects/Market__c/fields/Avg_AUM__c.field-meta.xml
<CustomField>
    <fullName>Avg_AUM__c</fullName>
    <label>Avg. AUM</label>
    <length>100</length>
    <type>Text</type>
</CustomField>