force-app/main/default/objects/Market__c/fields/Avg_client_ret_1yr__c.field-meta.xml
<CustomField>
    <fullName>Avg_client_ret_1yr__c</fullName>
    <label>Avg. client ret % (1yr)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>