force-app/main/default/objects/Market__c/fields/Avg_of_Client_Households__c.field-meta.xml
<CustomField>
    <fullName>Avg_of_Client_Households__c</fullName>
    <label>Avg. # of Client Households</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>