force-app/main/default/objects/Market__c/fields/Avg_of_Trans_Past_3_Years_RE_MP__c.field-meta.xml
<CustomField>
    <fullName>Avg_of_Trans_Past_3_Years_RE_MP__c</fullName>
    <label>Avg. # of Trans. Past 3 Years (RE/MP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>