force-app/main/default/objects/Market__c/fields/Avg_of_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Avg_of_Transactions__c</fullName>
    <label>Avg. # of Trans. Past Year (RE/MP/HA)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>