force-app/main/default/objects/Market__c/fields/Avg_of_Years_in_industry__c.field-meta.xml
<CustomField>
    <fullName>Avg_of_Years_in_industry__c</fullName>
    <label>Avg. # of Years in industry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>