force-app/main/default/objects/Market__c/fields/Avg_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Avg_Purchase__c</fullName>
    <formula>Total_Purchases__c / Purchases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Avg Purchase</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>