force-app/main/default/objects/Market__c/fields/Avg_Value_of_Trans_Past_3_Years_RE__c.field-meta.xml
<CustomField>
    <fullName>Avg_Value_of_Trans_Past_3_Years_RE__c</fullName>
    <label>Avg. Value of Trans. Past 3 Years (RE)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>