force-app/main/default/objects/Market__c/fields/Award_Area__c.field-meta.xml
<CustomField>
    <fullName>Award_Area__c</fullName>
    <label>Award Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>