force-app/main/default/objects/Market__c/fields/Award_Guide__c.field-meta.xml
<CustomField>
    <fullName>Award_Guide__c</fullName>
    <inlineHelpText>This field is used for the certification guide link.</inlineHelpText>
    <label>Certification Link</label>
    <type>Url</type>
</CustomField>