force-app/main/default/objects/Market__c/fields/Award_Methodology_Summary__c.field-meta.xml
<CustomField>
    <fullName>Award_Methodology_Summary__c</fullName>
    <description>Short summary of program&apos;s award methodology. Used in Digital Spotlight Award product.</description>
    <label>Award Methodology Summary</label>
    <length>250</length>
    <type>Text</type>
</CustomField>