force-app/main/default/objects/Market__c/fields/BRP_Email_Date__c.field-meta.xml
<CustomField>
    <fullName>BRP_Email_Date__c</fullName>
    <label>BRP Email Date</label>
    <type>Date</type>
</CustomField>