force-app/main/default/objects/Market__c/fields/Candidate_change__c.field-meta.xml
<CustomField>
    <fullName>Candidate_change__c</fullName>
    <formula>(Actual_Candidates__c /  Candidates_LY_Actual__c -1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Candidate % change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>