force-app/main/default/objects/Market__c/fields/Candidates_in_Market__c.field-meta.xml
<CustomField>
    <fullName>Candidates_in_Market__c</fullName>
    <label>Candidates in Market</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>