force-app/main/default/objects/Market__c/fields/Candidates_LY_Actual__c.field-meta.xml
<CustomField>
    <fullName>Candidates_LY_Actual__c</fullName>
    <label>Candidates LY Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>