force-app/main/default/objects/Market__c/fields/Candidates_TY_Plan__c.field-meta.xml
<CustomField>
    <fullName>Candidates_TY_Plan__c</fullName>
    <label>Candidates TY Plan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>