force-app/main/default/objects/Market__c/fields/CityImageURL__c.field-meta.xml
<CustomField>
    <fullName>CityImageURL__c</fullName>
    <description>URL for the file location of the City Image photo.</description>
    <inlineHelpText>Used to populate cover image on Digital Spotlight Award when user has no profile photo or user-entered photo.</inlineHelpText>
    <label>City Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>