force-app/main/default/objects/Market__c/fields/Client_Approval_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Client_Approval_Deadline__c</fullName>
    <label>Client Approval Deadline RETIRED</label>
    <type>Date</type>
</CustomField>