force-app/main/default/objects/Market__c/fields/Consumers_Surveyed__c.field-meta.xml
<CustomField>
    <fullName>Consumers_Surveyed__c</fullName>
    <description>Number of consumers surveyed.</description>
    <inlineHelpText>Number of consumers surveyed.</inlineHelpText>
    <label>Consumers Surveyed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>