force-app/main/default/objects/Market__c/fields/CSR_Follow_Up_1_Deadline__c.field-meta.xml
<CustomField>
    <fullName>CSR_Follow_Up_1_Deadline__c</fullName>
    <formula>DATE(
  YEAR( Market_Close_Date__c ) + FLOOR( ( MONTH ( Market_Close_Date__c ) + 1 - 1 ) / 12 ),
  MOD( MONTH ( Market_Close_Date__c ) + 1 - 1 + 
    IF( DAY ( Market_Close_Date__c ) &gt; CASE( MOD( MONTH( Market_Close_Date__c ) + 1 - 1, 12 ) + 1, 
      2, 28,
      4, 30,
      6, 30,
      9, 30, 
      11, 30,
      31 ), 1, 0 ), 12 ) + 1,
    IF( DAY( Market_Close_Date__c ) &gt; CASE( MOD( MONTH( Market_Close_Date__c ) + 1 - 1, 12 ) + 1,
      2, 28, 
      4, 30, 
      6, 30, 
      9, 30, 
      11, 30, 
      31 ), 
    1, DAY( Market_Close_Date__c )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSR Follow-Up 1 Deadline</label>
    <type>Date</type>
</CustomField>