force-app/main/default/objects/Market__c/fields/Date_client_submissions_due_for_next_yr__c.field-meta.xml
<CustomField>
    <fullName>Date_client_submissions_due_for_next_yr__c</fullName>
    <label>Date client submissions due for next yr</label>
    <type>Date</type>
</CustomField>