force-app/main/default/objects/Market__c/fields/Digital_Spotlight_Release__c.field-meta.xml
<CustomField>
    <fullName>Digital_Spotlight_Release__c</fullName>
    <description>This is the date Digital Spotlights for this market will go live. Note, that sales after this date will go live same day.</description>
    <label>Digital Spotlight Release</label>
    <type>Date</type>
</CustomField>