force-app/main/default/objects/Market__c/fields/Early_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Early_Approval_Date__c</fullName>
    <label>Early Approval Date</label>
    <type>Date</type>
</CustomField>