force-app/main/default/objects/Market__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <description>Short summary of the evaluation and eligibility criteria for the award in this market and profession.</description>
    <label>Eligibility Criteria Summary</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>