force-app/main/default/objects/Market__c/fields/Est_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Est_Remaining__c</fullName>
    <formula>Alive_Opportunities__c * Avg_Purchase__c * Purchased__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Est. Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>