force-app/main/default/objects/Market__c/fields/Est_Total_Market__c.field-meta.xml
<CustomField>
    <fullName>Est_Total_Market__c</fullName>
    <formula>Est_Remaining__c + Total_Purchases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>$ Est. Total Market</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>