force-app/main/default/objects/Market__c/fields/Final_Index__c.field-meta.xml
<CustomField>
    <fullName>Final_Index__c</fullName>
    <description>This is the OFFICIAL date when the section index is due and sent to production</description>
    <inlineHelpText>This is the OFFICIAL date when the section index is due and sent to production</inlineHelpText>
    <label>Final Index</label>
    <type>Date</type>
</CustomField>