force-app/main/default/objects/Market__c/fields/Final_Status__c.field-meta.xml
<CustomField>
    <fullName>Final_Status__c</fullName>
    <label>Final Status</label>
    <type>Date</type>
</CustomField>