force-app/main/default/objects/Market__c/fields/Firm_Review_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Firm_Review_Deadline__c</fullName>
    <description>Formula for Firm Review is 28 days after the ACDF close (4 week period)</description>
    <formula>IF(ISBLANK(Override_Firm_Review_Date__c), ACDF_End_Date__c  + 28, Override_Firm_Review_Date__c)</formula>
    <label>Firm Review Deadline</label>
    <type>Date</type>
</CustomField>