force-app/main/default/objects/Market__c/fields/Firms_Surveyed__c.field-meta.xml
<CustomField>
    <fullName>Firms_Surveyed__c</fullName>
    <label>Firms Surveyed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>