force-app/main/default/objects/Market__c/fields/Forbes_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Issue_Date__c</fullName>
    <label>Forbes Issue Date</label>
    <type>Date</type>
</CustomField>