force-app/main/default/objects/Market__c/fields/Forbes_Reader__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Reader__c</fullName>
    <label>Forbes Readership</label>
    <length>250</length>
    <type>Text</type>
</CustomField>