force-app/main/default/objects/Market__c/fields/Forbes_Section__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Section__c</fullName>
    <description>Forbes section with watermark</description>
    <inlineHelpText>Forbes section with watermark</inlineHelpText>
    <label>Forbes Section</label>
    <type>Url</type>
</CustomField>