force-app/main/default/objects/Market__c/fields/Forbes_Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Space_Reservation__c</fullName>
    <description>Forbes Space Reservation Date</description>
    <inlineHelpText>Space Reservation Date for Forbes</inlineHelpText>
    <label>Forbes Space Reservation</label>
    <type>Date</type>
</CustomField>