force-app/main/default/objects/Market__c/fields/Forbes_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Forbes_Upload_Date__c</fullName>
    <label>Forbes Upload Date</label>
    <type>Date</type>
</CustomField>