force-app/main/default/objects/Market__c/fields/Form_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_URL__c</fullName>
    <label>Research Form URL</label>
    <type>Url</type>
</CustomField>