force-app/main/default/objects/Market__c/fields/Fortune_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Issue_Date__c</fullName>
    <description>Fortune Publication Date</description>
    <inlineHelpText>Fortune Publication Date</inlineHelpText>
    <label>Fortune Issue Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>