force-app/main/default/objects/Market__c/fields/Fortune_Section__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Section__c</fullName>
    <description>Fortune Section with Water Mark</description>
    <inlineHelpText>Fortune Section with Water Mark</inlineHelpText>
    <label>Fortune Section</label>
    <type>Url</type>
</CustomField>