force-app/main/default/objects/Market__c/fields/Fortune_Space_Reservation__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Space_Reservation__c</fullName>
    <description>Fortune Space Reservation Date</description>
    <inlineHelpText>Fortune Space Reservation Date</inlineHelpText>
    <label>Fortune Space Reservation</label>
    <type>Date</type>
</CustomField>