force-app/main/default/objects/Market__c/fields/Fortune_Upload_Date__c.field-meta.xml
<CustomField>
    <fullName>Fortune_Upload_Date__c</fullName>
    <description>Fortune Upload Date</description>
    <inlineHelpText>Fortune Upload Date</inlineHelpText>
    <label>Fortune Upload Date</label>
    <type>Date</type>
</CustomField>