force-app/main/default/objects/Market__c/fields/Free_Financing_Promo_Approved__c.field-meta.xml
<CustomField>
    <fullName>Free_Financing_Promo_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Financing Promo Approved</label>
    <type>Checkbox</type>
</CustomField>