force-app/main/default/objects/Market__c/fields/Free_Financing_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Free_Financing_Request_Status__c</fullName>
    <label>Free Financing Request Status</label>
    <length>25</length>
    <type>Text</type>
</CustomField>