force-app/main/default/objects/Market__c/fields/Free_Financing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Free_Financing_Start_Date__c</fullName>
    <label>Free Financing Start Date</label>
    <type>Date</type>
</CustomField>