force-app/main/default/objects/Market__c/fields/Fullfillment_Proof_Delivery_Date_REMPHA__c.field-meta.xml
<CustomField>
    <fullName>Fullfillment_Proof_Delivery_Date_REMPHA__c</fullName>
    <formula>Sales_Close__c + 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fullfillment Proof Delivery Date REMPHA</label>
    <type>Date</type>
</CustomField>