force-app/main/default/objects/Market__c/fields/Graphics_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field specifies which Graphics employee is assigned to the market.</description>
    <label>Graphics Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Markets4</relationshipName>
    <type>Lookup</type>
</CustomField>