force-app/main/default/objects/Market__c/fields/Graphics_Lead__c.field-meta.xml
<CustomField>
    <fullName>Graphics_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Graphics Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Markets2</relationshipName>
    <type>Lookup</type>
</CustomField>