force-app/main/default/objects/Market__c/fields/Group_Association__c.field-meta.xml
<CustomField>
    <fullName>Group_Association__c</fullName>
    <label>Group Association</label>
    <length>100</length>
    <type>Text</type>
</CustomField>