force-app/main/default/objects/Market__c/fields/Guidebook__c.field-meta.xml
<CustomField>
    <fullName>Guidebook__c</fullName>
    <label>Guidebook With Price</label>
    <type>Url</type>
</CustomField>