force-app/main/default/objects/Market__c/fields/Guidebook_No_Price__c.field-meta.xml
<CustomField>
    <fullName>Guidebook_No_Price__c</fullName>
    <label>Guidebook No Price</label>
    <type>Url</type>
</CustomField>