force-app/main/default/objects/Market__c/fields/Index_Audit__c.field-meta.xml
<CustomField>
    <fullName>Index_Audit__c</fullName>
    <formula>New_Final_Upload__c - 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Audit</label>
    <type>Date</type>
</CustomField>