force-app/main/default/objects/Market__c/fields/Index_Audit_Complete__c.field-meta.xml
<CustomField>
    <fullName>Index_Audit_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the Index Audit is complete for Ad Production</description>
    <inlineHelpText>Check this box when the Index Audit is complete for Ad Production</inlineHelpText>
    <label>Index Audit Complete</label>
    <type>Checkbox</type>
</CustomField>