force-app/main/default/objects/Market__c/fields/Index_Pull__c.field-meta.xml
<CustomField>
    <fullName>Index_Pull__c</fullName>
    <formula>Auto_Round_One__c - 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Pull</label>
    <type>Date</type>
</CustomField>