force-app/main/default/objects/Market__c/fields/Index_Pull_Complete__c.field-meta.xml
<CustomField>
    <fullName>Index_Pull_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box when the Index Pull is completed for Ad Production</description>
    <inlineHelpText>Check this box when the Index Pull is completed for Ad Production</inlineHelpText>
    <label>Index Pull Complete</label>
    <type>Checkbox</type>
</CustomField>