force-app/main/default/objects/Market__c/fields/Index_Pull_Date1__c.field-meta.xml
<CustomField>
    <fullName>Index_Pull_Date1__c</fullName>
    <formula>IF(  Index_Pull_Test1__c  = &quot;Saturday&quot; ,  Index_Pull__c  + 2 , IF(Index_Pull_Test1__c  = &quot;Sunday&quot;, Index_Pull__c+ 1,  Index_Pull__c  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Pull Date</label>
    <type>Date</type>
</CustomField>