force-app/main/default/objects/Market__c/fields/Index_Pull_Date__c.field-meta.xml
<CustomField>
    <fullName>Index_Pull_Date__c</fullName>
    <label>Index Pull Date</label>
    <type>Date</type>
</CustomField>