force-app/main/default/objects/Market__c/fields/Index_Pull_Test1__c.field-meta.xml
<CustomField>
    <fullName>Index_Pull_Test1__c</fullName>
    <formula>Case(WEEKDAY( Index_Pull__c ), 1,&apos;Sunday&apos;, 2, &apos;Monday&apos;, 3, &apos;Tuesday&apos;, 4, &apos;Wednesday&apos;, 5, &apos;Thursday&apos;, 6, &apos;Friday&apos;,&apos;Saturday&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Index Pull Day</label>
    <type>Text</type>
</CustomField>