force-app/main/default/objects/Market__c/fields/Info_Sessions_Available__c.field-meta.xml
<CustomField>
    <fullName>Info_Sessions_Available__c</fullName>
    <description>Info sessions available should me added in a Comma Separated List: Session 1, Session 2...  if none, leave this field blank.</description>
    <inlineHelpText>Info sessions available should me added in a Comma Separated List: Session 1, Session 2...  if none, leave this field blank.</inlineHelpText>
    <label>Info Sessions Available</label>
    <length>75</length>
    <type>Text</type>
</CustomField>