force-app/main/default/objects/Market__c/fields/Issue_Issues__c.field-meta.xml
<CustomField>
    <fullName>Issue_Issues__c</fullName>
    <inlineHelpText>Type Issue or Issues, depending on number of Magazines for this Market.</inlineHelpText>
    <label>Issue / Issues</label>
    <length>15</length>
    <type>Text</type>
</CustomField>