force-app/main/default/objects/Market__c/fields/Launch_Market__c.field-meta.xml
<CustomField>
    <fullName>Launch_Market__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this checkbox is set to &apos;True&apos;; the market will launch and trigger opportunity entrance into the MC Journey</description>
    <inlineHelpText>When this checkbox is set to &apos;True&apos;; the market will launch and trigger opportunity entrance into the MC Journey</inlineHelpText>
    <label>Launch Market</label>
    <type>Checkbox</type>
</CustomField>