force-app/main/default/objects/Market__c/fields/LY_1_4_page_profiles_sold__c.field-meta.xml
<CustomField>
    <fullName>LY_1_4_page_profiles_sold__c</fullName>
    <label>LY 1/4 page profiles sold</label>
    <length>5</length>
    <type>Text</type>
</CustomField>