force-app/main/default/objects/Market__c/fields/LY_2_Page_Profiles_sold__c.field-meta.xml
<CustomField>
    <fullName>LY_2_Page_Profiles_sold__c</fullName>
    <label>LY 2 Page Profiles sold</label>
    <length>5</length>
    <type>Text</type>
</CustomField>