force-app/main/default/objects/Market__c/fields/LY_eighteenth_page_profiles_sold__c.field-meta.xml
<CustomField>
    <fullName>LY_eighteenth_page_profiles_sold__c</fullName>
    <label>LY eighteenth page profiles sold</label>
    <length>5</length>
    <type>Text</type>
</CustomField>