force-app/main/default/objects/Market__c/fields/LY_Forbes_Section__c.field-meta.xml
<CustomField>
    <fullName>LY_Forbes_Section__c</fullName>
    <description>Previous Year&apos;s Forbes Section</description>
    <inlineHelpText>Previous Year&apos;s Forbes Section</inlineHelpText>
    <label>LY Forbes Section</label>
    <type>Url</type>
</CustomField>