force-app/main/default/objects/Market__c/fields/LY_Fortune_Section__c.field-meta.xml
<CustomField>
    <fullName>LY_Fortune_Section__c</fullName>
    <description>Fortune Section with Water Mark</description>
    <inlineHelpText>Fortune Section with Water Mark</inlineHelpText>
    <label>LY Fortune Section</label>
    <type>Url</type>
</CustomField>